# rules_metal

./: .gitignore  MODULE.bazel  metal.bzl
