###############################################################################
module(name = "rules_metal")

bazel_dep(name = "apple_support", version = "1.22.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_xcodeproj", version = "3.2.0")
